--- a/WpfApp1/DnDGenerator.csproj
+++ b/WpfApp1/DnDGenerator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9581856C-6D41-4C97-9CA8-EFDFFF41E98D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WpfApp1</RootNamespace>
-    <AssemblyName>WpfApp1</AssemblyName>
+    <AssemblyName>DnDGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
